fixed blog general margins and cropped hero image horizontally

--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -17,10 +17,14 @@
 }
 
 .blog-text-wrapper {
-    border: solid 2px green;
+    // border: solid 2px green;
     width: auto;
 }
 
+// .blog-text-wrapper {
+//     background-color: $darkbluegrey;
+//     border: solid 3px yellow;
+// }
 .aside {
     grid-column: 1;
     grid-row: 1;
@@ -28,7 +32,41 @@
     margin-left: 0;
     margin-top: 3em;
     z-index: 1;
-    border: solid 2px red;
+    // border: solid 2px red;
+    position: relative;
+}
+
+.aside-img-container {
+    position: absolute;
+    top: 0;
+    z-index: 1;
+}
+
+.aside-text-container {
+    position: absolute;
+    top: 1em;
+    right: -0.5em;
+    width: 78%;
+    padding: 77% 1em 1em;
+}
+
+.blog-img-wrapper {
+    min-height: 00px;
+    width: 100%;
+    object-fit: cover;
+    justify-content: center;
+    border: solid 3px red;
+}
+
+.blog-img-wrapper img {
+    height: 30em;
+    width: 100%;
+    object-fit: cover;
+}
+
+.blog-text-wrapper h3 {
+    // background-color: $darkbluegrey;
+    padding-top: 2em;
 }
 
 // .blog-text-wrapper {
