--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -23,3 +23,9 @@ nav li,
 a {
     text-decoration: none;
 }
+
+.attractions,
+.gallery,
+.aside-text-container {
+    background-color: $spruce;
+}
