--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -5,11 +5,6 @@
         display: flex;
     }
     
-    .attractions,
-    .gallery {
-        background-color: $spruce;
-    }
-    
     h1 {
         width: 20%;
         margin-left: 0.4em;
